Fix desktop nav showing on mobile

--- a/wp-content/themes/Revera/css/style-menu.css
+++ b/wp-content/themes/Revera/css/style-menu.css
@@ -86,6 +86,10 @@ div.slicknav_menu,
 		z-index: 300;
 		max-height: 100%;
 	}
+    
+    .desktop-nav{
+        display: none;
+    }
 }
 
 .slicknav_nav a, 
